--- a/BPS/src/main/resources/application.yml
+++ b/BPS/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
   #JPA
   jpa:
     hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl  # 테이블, 컬럼명 대, 소문자 구분
       ddl-auto: update
     generate-ddl: false
     show-sql: true
