--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -1,4 +1,4 @@
-name: DeploydevAWS
+name: Deployaws
 
 on:
   push:
@@ -9,44 +9,13 @@ on:
       - closed
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-        
-      - name: Build with Maven
-        run: mvn clean package -DskipTests
-        env:
-          DB_URL: ${{ secrets.DB_URL }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        
-      - name: Archive Production Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: spring-boot-app
-          path: target/*.jar
-
   deploy:
 #    if: github.event.pull_request.merged == true
-    needs: build
     environment: dev
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: spring-boot-app
 
       # AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
       - name: Configure AWS credentials
