[Fix] restdb -> BPS 이름 수정

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/app/restdb
+    destination: /home/ubuntu/app/BPS
     overwrite: yes
 
 permissions:
