--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,14 @@ services:
     depends_on:
       - rest
   
-  rest:
+  bpsapp:
     build: .
     ports:
       - 7777:8080
+    environment:
+      - DB_URL: ${DB_URL}
+      - DB_USER: ${DB_USER}
+      - DB_PASSWORD: ${DB_PASSWORD}
     platform: linux/amd64
     depends_on:
       - db
