--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -16,12 +16,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
-      - name: Runascript
+
+      - name: Run a script
         env:
           DB_URL: ${{ secrets.DB_URL }}
           DB_USER: ${{ secrets.DB_USER }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        run: echo "Run a script"
 
       # AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
       - name: Configure AWS credentials
