--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
     depends_on:
-      - rest
+      - bps
   
   bpsapp:
     build: .
