--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
     build: .
     ports:
       - 7777:8080
+    environment:
+      - DB_URL: ${{ secrets.DB_URL }}
+      - DB_USER: ${{ secrets.DB_USER }}
+      - DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     platform: linux/amd64
     depends_on:
       - db
