[Fix] 환경 변수 수정

--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Run a script
         env:
           DB_URL: ${{ secrets.DB_URL }}
-          DB_USER: ${{ secrets.DB_USER }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: echo "Run a script"
 
