--- a/nginx/conf/proxy.conf
+++ b/nginx/conf/proxy.conf
@@ -9,7 +9,7 @@ server {
     error_log  /var/log/nginx/api-cache.error.log;
 
     location / {
-        proxy_pass http://bps:8080;
+        proxy_pass http://bpsapp:8080;
         
         # proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
         proxy_cache_valid 200 302 5s;
