[Fix] git deploy 동작 수정

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,14 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+#  - source: /
+#    destination: /home/ubuntu/app/bps
+#    overwrite: yes
+  - source: /*.jar
     destination: /home/ubuntu/app/bps
+    overwrite: yes
+  - source: /.env
+    destination: /home/ubuntu/
     overwrite: yes
 
 permissions:
