--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -1,28 +1,40 @@
-name: Deployaws
+name: BPSdeployBE
 
 on:
   push:
     branches:
-      - dev
+      - release/1.0.0
   pull_request:
     types:
       - closed
 
 jobs:
+
   deploy:
 #    if: github.event.pull_request.merged == true
-    environment: dev
+    environment: release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Run a script
-        env:
-          DB_URL: ${{ secrets.DB_URL }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: echo "Run a script"
+      # Maven을 사용하여 JAR 파일 빌드
+      - name: Build JAR
+        run: mvn clean package
+
+#      - name: Run a script
+#        env:
+#          DB_URL: ${{ secrets.DB_URL }}
+#          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#        run: echo "Run a script"
+
+      # .env 파일 생성
+      - name: Create .env file
+        run: |
+          echo "DB_URL=${{ secrets.DB_URL }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
       # AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
       - name: Configure AWS credentials
@@ -32,14 +44,24 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
 
-      # 빌드 결과물을 S3 버킷에 업로드
-      - name: Upload to AWS S3
+#      # 빌드 결과물을 S3 버킷에 업로드
+#      - name: Upload to AWS S3
+#        run: |
+#          aws deploy push \
+#            --application-name ${{ vars.CODE_DEPLOY_APP_NAME }} \
+#            --ignore-hidden-files \
+#            --s3-location s3://${{ vars.S3_BUCKET_NAME }}/$GITHUB_SHA.zip \
+#            --source .
+
+      # .env 파일을 S3로 업로드
+      - name: Upload .env to AWS S3
         run: |
-          aws deploy push \
-            --application-name ${{ vars.CODE_DEPLOY_APP_NAME }} \
-            --ignore-hidden-files \
-            --s3-location s3://${{ vars.S3_BUCKET_NAME }}/$GITHUB_SHA.zip \
-            --source .
+          aws s3 cp .env s3://${{ vars.S3_BUCKET_NAME }}/${{ github.run_id }}/.env
+
+      # 빌드된 JAR 파일을 S3 버킷에 업로드
+      - name: Upload JAR to AWS S3
+        run: |
+          aws s3 cp ./target/your-application.jar s3://${{ vars.S3_BUCKET_NAME }}/${{ github.run_id }}.jar
 
       # S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
       - name: Deploy to AWS EC2 from S3
