--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
 name: bps
 services:
-  proxy:
-    image: nginx
-    volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
-    ports:
-      - "8888:80"
-    environment:
-      - NGINX_HOST=localhost
-      - NGINX_PORT=80
-    depends_on:
-      - bpsapp
-  
+#  proxy:
+#    image: nginx
+#    volumes:
+#      - ./nginx/conf:/etc/nginx/conf.d
+#    ports:
+#      - "8888:80"
+#    environment:
+#      - NGINX_HOST=localhost
+#      - NGINX_PORT=80
+#    depends_on:
+#      - bpsapp
   bpsapp:
     build: .
     ports:
@@ -25,15 +24,15 @@ services:
       - db
     links:
       - db
-  db:
-    image: mariadb:10.5.24-focal
-    ports: 
-      - 33306:3306
-    volumes:
-        - ./mariadb/conf.d:/etc/mysql/conf.d
-        - ./mariadb/data:/var/lib/mysql
-    environment:
-      MARIADB_ROOT_PASSWORD: my_root_password
-      MARIADB_USER: my_user
-      MARIADB_PASSWORD: my_password
-      MARIADB_DATABASE: my_database
+#  db:
+#    image: mariadb:10.5.24-focal
+#    ports:
+#      - 33306:3306
+#    volumes:
+#        - ./mariadb/conf.d:/etc/mysql/conf.d
+#        - ./mariadb/data:/var/lib/mysql
+#    environment:
+#      MARIADB_ROOT_PASSWORD: my_root_password
+#      MARIADB_USER: my_user
+#      MARIADB_PASSWORD: my_password
+#      MARIADB_DATABASE: my_database
