--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/checkout@v3
 
       # Maven을 사용하여 JAR 파일 빌드
+      - name: Change build directory
+        run: cd BPS
+
       - name: Build JAR
         run: mvn clean package
 
