--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -23,7 +23,10 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+#        run: mvn -B package --file pom.xml
+        run: |
+          mvn -B package --file pom.xml -Dspring-boot.run.arguments=
+          --DB_URL='${{ secrets.DB_URL }}',--DB_USERNAME='${{ secrets.DB_USERNAME }}',--DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
         working-directory: ./BPS
 
 #      - name: Run a script
