--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -24,8 +24,12 @@ jobs:
           cache: maven
       - name: Build with Maven
 #        run: mvn -B package --file pom.xml
-        run: mvn -B package --file pom.xml -Dspring-boot.run.arguments=--DB_URL='${{ secrets.DB_URL }}',--DB_USERNAME='${{ secrets.DB_USERNAME }}',--DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+        run: mvn -B package --file pom.xml
         working-directory: ./BPS
+        env:
+          DB_URL = ${{ secrets.DB_URL }}
+          DB_USERNAME = ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD = ${{ secrets.DB_PASSWORD }}
 
 #      - name: Run a script
 #        env:
