--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -27,9 +27,9 @@ jobs:
         run: mvn -B package --file pom.xml
         working-directory: ./BPS
         env:
-          DB_URL: ${{ secrets.DB_URL }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          spring.datasource.url: ${{ secrets.DB_URL }}
+          spring.datasource.username: ${{ secrets.DB_USERNAME }}
+          spring.datasource.password: ${{ secrets.DB_PASSWORD }}
 
 #      - name: Run a script
 #        env:
