--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -14,6 +14,10 @@ jobs:
 #    if: github.event.pull_request.merged == true
     environment: release
     runs-on: ubuntu-latest
+    env:
+      DB_URL: ${{ secrets.DB_URL }}
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -25,15 +29,15 @@ jobs:
 
       - name: Print DB_URL
         run: echo "DB_URL=${{ secrets.DB_URL }}"
-        
+
       - name: Build with Maven
 #        run: mvn -B package --file pom.xml
         run: mvn -B package --file pom.xml
         working-directory: ./BPS
-        env:
-          DB_URL: "${{ secrets.DB_URL }}"
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#        env:
+#          DB_URL: "${{ secrets.DB_URL }}"
+#          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 #          spring.datasource.url: ${{ secrets.DB_URL }}
 #          spring.datasource.username: ${{ secrets.DB_USERNAME }}
 #          spring.datasource.password: ${{ secrets.DB_PASSWORD }}
