--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -15,7 +15,7 @@ jobs:
     environment: release
     runs-on: ubuntu-latest
     env:
-      DB_URL: ${{ secrets.DB_URL }}
+      DB_URL: "${{ secrets.DB_URL }}"
       DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
