--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -14,10 +14,10 @@ jobs:
 #    if: github.event.pull_request.merged == true
     environment: release
     runs-on: ubuntu-latest
-    env:
-      DB_URL: "${{ secrets.DB_URL }}"
-      DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#    env:
+#      DB_URL: "${{ secrets.DB_URL }}"
+#      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+#      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -34,13 +34,10 @@ jobs:
 #        run: mvn -B package --file pom.xml
         run: mvn -B package --file pom.xml
         working-directory: ./BPS
-#        env:
-#          DB_URL: "${{ secrets.DB_URL }}"
-#          DB_USERNAME: ${{ secrets.DB_USERNAME }}
-#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-#          spring.datasource.url: ${{ secrets.DB_URL }}
-#          spring.datasource.username: ${{ secrets.DB_USERNAME }}
-#          spring.datasource.password: ${{ secrets.DB_PASSWORD }}
+        env:
+          DB_URL: "${{ secrets.DB_URL }}"
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
 #      - name: Run a script
 #        env:
@@ -81,7 +78,7 @@ jobs:
       # 빌드된 JAR 파일을 S3 버킷에 업로드
       - name: Upload JAR to AWS S3
         run: |
-          aws s3 cp ./target/your-application.jar s3://${{ vars.S3_BUCKET_NAME }}/${{ github.run_id }}.jar
+          aws s3 cp ./target/*.jar s3://${{ vars.S3_BUCKET_NAME }}/${{ github.run_id }}.jar
 
       # S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
       - name: Deploy to AWS EC2 from S3
