--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -75,7 +75,12 @@ jobs:
       # 기타 필요한 파일을 S3 버킷에 업로드
       - name: Upload etc
         run: |
-          aws s3 cp * s3://${{ vars.S3_BUCKET_NAME }}/
+          aws s3 cp appspec.yml s3://${{ vars.S3_BUCKET_NAME }}/
+          aws s3 cp docker-compose.yml s3://${{ vars.S3_BUCKET_NAME }}/
+          aws s3 cp Dockerfile s3://${{ vars.S3_BUCKET_NAME }}/
+          aws s3 cp start.sh s3://${{ vars.S3_BUCKET_NAME }}/
+          aws s3 cp stop.sh s3://${{ vars.S3_BUCKET_NAME }}/
+          
 
       # S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
       - name: Deploy to AWS EC2 from S3
