--- a/.github/workflows/action.dev.yml
+++ b/.github/workflows/action.dev.yml
@@ -62,25 +62,36 @@ jobs:
 #            --s3-location s3://${{ vars.S3_BUCKET_NAME }}/$GITHUB_SHA.zip \
 #            --source .
 
-      # .env 파일을 S3로 업로드
-      - name: Upload .env to AWS S3
-        run: |
-          aws s3 cp .env s3://${{ vars.S3_BUCKET_NAME }}/.env
+#      # .env 파일을 S3로 업로드
+#      - name: Upload .env to AWS S3
+#        run: |
+#          aws s3 cp .env s3://${{ vars.S3_BUCKET_NAME }}/.env
+#
+#      # 빌드된 JAR 파일을 S3 버킷에 업로드
+#      - name: Upload JAR to AWS S3
+#        run: |
+#          aws s3 cp ./BPS/target/*.jar s3://${{ vars.S3_BUCKET_NAME }}/BPS.jar
+#
+#      # 기타 필요한 파일을 S3 버킷에 업로드
+#      - name: Upload etc
+#        run: |
+#          aws s3 cp appspec.yml s3://${{ vars.S3_BUCKET_NAME }}/
+#          aws s3 cp docker-compose.yml s3://${{ vars.S3_BUCKET_NAME }}/
+#          aws s3 cp Dockerfile s3://${{ vars.S3_BUCKET_NAME }}/
+#          aws s3 cp start.sh s3://${{ vars.S3_BUCKET_NAME }}/
+#          aws s3 cp stop.sh s3://${{ vars.S3_BUCKET_NAME }}/
 
-      # 빌드된 JAR 파일을 S3 버킷에 업로드
-      - name: Upload JAR to AWS S3
+      # S3 버킷에 업로드 할 파일 압축
+      - name: Zip deployment files
         run: |
-          aws s3 cp ./BPS/target/*.jar s3://${{ vars.S3_BUCKET_NAME }}/BPS.jar
-
-      # 기타 필요한 파일을 S3 버킷에 업로드
-      - name: Upload etc
-        run: |
-          aws s3 cp appspec.yml s3://${{ vars.S3_BUCKET_NAME }}/
-          aws s3 cp docker-compose.yml s3://${{ vars.S3_BUCKET_NAME }}/
-          aws s3 cp Dockerfile s3://${{ vars.S3_BUCKET_NAME }}/
-          aws s3 cp start.sh s3://${{ vars.S3_BUCKET_NAME }}/
-          aws s3 cp stop.sh s3://${{ vars.S3_BUCKET_NAME }}/
+          zip $GITHUB_SHA.zip .env appspec.yml docker-compose.yml Dockerfile start.sh stop.sh ./BPS/target/*.jar
           
+
+      # Zip 파일을 S3로 업로드
+      - name: Upload Zip to AWS S3
+        run: |
+          aws s3 cp $GITHUB_SHA.zip s3://${{ vars.S3_BUCKET_NAME }}/$GITHUB_SHA.zip 
+      
 
       # S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
       - name: Deploy to AWS EC2 from S3
