--- a/appspec.yml
+++ b/appspec.yml
@@ -4,12 +4,12 @@ files:
   - source: /
     destination: /home/ubuntu/app/bps
     overwrite: yes
-  - source: /*.jar
-    destination: /home/ubuntu/app/bps
-    overwrite: yes
-  - source: /.env
-    destination: /home/ubuntu/
-    overwrite: yes
+#  - source: /*.jar
+#    destination: /home/ubuntu/app/bps
+#    overwrite: yes
+#  - source: /.env
+#    destination: /home/ubuntu/
+#    overwrite: yes
 
 permissions:
   - object: /
