--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   bpsapp:
     build: .
     ports:
-      - 8081:8080
+      - 8081:8081 #outport/dockerport 
     environment:
       DB_URL: $DB_URL
       DB_USERNAME: $DB_USERNAME
