--- a/BPS/pom.xml
+++ b/BPS/pom.xml
@@ -70,6 +70,13 @@
 			<version>4.8.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
