--- a/BPS/src/main/resources/application.yml
+++ b/BPS/src/main/resources/application.yml
@@ -1,44 +1,8 @@
 spring:
-  sql:
-    init:
-      platform: mariadb
-      encoding: UTF-8
-      mode: always
-
-  # 메일 전송
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: luinadel33@gmail.com
-    password: ${GMAIL_PASSWORD}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-
-
-
-  datasource:
-    driverClassName: org.mariadb.jdbc.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-
-  #JPA
-  jpa:
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl  # 테이블, 컬럼명 대, 소문자 구분
-      ddl-auto: update
-    generate-ddl: false
-    show-sql: true
-server:
-  port: 8081
-
-  # 스케줄링 활성화
-  task:
-    scheduling:
-      pool:
-        size: 5
+  profiles:
+    default: test
+---
+spring:
+  config:
+    activate:
+      on-profile: dev, test
