--- a/BPS/pom.xml
+++ b/BPS/pom.xml
@@ -172,6 +172,16 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-pmd-plugin</artifactId>
+					<version>3.21.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
